--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- This page loads in the browser -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+      <!-- this is linked to the app.component.ts file in @Component({ selector: 'app-root'}) -->
 </body>
 </html>
