added a server component with a decorator.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading ... </app-root>
       <!-- this is linked to the app.component.ts file in @Component({ selector: 'app-root'}) -->
 </body>
 </html>
